k8s/owncloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud-web
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud-web
  template:
    metadata:
      labels:
        app: owncloud-web
    spec:
      containers:
      - name: owncloud
        image: nguyenphong8852/owncloud-k8s-demo:7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: owncloud-data
          mountPath: /mnt/data
      volumes:
      - name: owncloud-data
        persistentVolumeClaim:
          claimName: owncloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-web
  namespace: owncloud
spec:
  selector:
    app: owncloud-web
  ports:
  - name: http
    port: 80
    targetPort: http
  type: ClusterIP
